kubernetes/webhook.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: riasc-system

---
kind: Service
apiVersion: v1
metadata:
  name: k8s-netem-webhook
  namespace: riasc-system
spec:
  selector:
    app: k8s-netem-webhook
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-netem-webhook
  labels:
    app: k8s-netem-webhook
  namespace: riasc-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-netem-webhook
  template:
    metadata:
      labels:
        app: k8s-netem-webhook
      name: webhook
    spec:
      serviceAccountName: k8s-netem
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      containers:
      - name: webhook
        command: ['k8s-netem-webhook']
        image: erigrid/netem:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        volumeMounts:
        - readOnly: true
          mountPath: /certs
          name: webhook-certs
        readinessProbe:
          httpGet:
            path: /health
            scheme: HTTPS
            port: 443
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            scheme: HTTPS
            port: 443
          initialDelaySeconds: 3
          periodSeconds: 5
      volumes:
      - name: webhook-certs
        secret:
          secretName: k8s-netem-webhook-certs

---
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: k8s-netem-webhook
webhooks:
- name: k8s-netem-webhook.riasc-system.svc
  sideEffects: None
  admissionReviewVersions:
    - "v1"
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZrekNDQTN1Z0F3SUJBZ0lVWVlFS1NvdHBjcCs5b0xqL3pKclRSK0dib0E0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1dURUxNQWtHQTFVRUJoTUNSRVV4RERBS0JnTlZCQWdNQTA1U1Z6RVBNQTBHQTFVRUJ3d0dRV0ZqYUdWdQpNU3N3S1FZRFZRUUREQ0pyT0hNdGJtVjBaVzB0ZDJWaWFHOXZheTV5YVdGell5MXplWE4wWlcwdWMzWmpNQjRYCkRUSXhNRGN4TWpFeU16UTBPRm9YRFRNeE1EY3hNREV5TXpRME9Gb3dXVEVMTUFrR0ExVUVCaE1DUkVVeEREQUsKQmdOVkJBZ01BMDVTVnpFUE1BMEdBMVVFQnd3R1FXRmphR1Z1TVNzd0tRWURWUVFERENKck9ITXRibVYwWlcwdApkMlZpYUc5dmF5NX [...]
    service:
      namespace: riasc-system
      name: k8s-netem-webhook
      path: /mutate
      port: 443
